[workspace]
resolver = "2"
members = [
    "packages/message-predicates/contract-message-predicate",
    "packages/fungible-token/bridge-fungible-token",
    "packages/base-asset"
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-bridge"
version = "0.3.0"
rust-version = "1.72.0"

[workspace.dependencies]
# Dependencies from fuel-vm repository:
fuel-asm = "0.50.0"
fuel-tx = "0.50.0"

# Dependencies from fuel-core repository:
fuel-core-types = { version = "0.27.0", default-features = false }

# Dependencies from fuels-rs repository:    
fuels = { version = "0.63.0", features = ["fuel-core-lib"] }

# Third-party dependencies
tokio = { version = "1.32.0", features = ["rt", "macros"] }
hex = "0.4.3"

# Base asset
sha2 = { version = "0.10.0" }