[project]
name = "bridge-fungible-token"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-core = "0.10.1"
fuel-core-interfaces = "0.10.1"
fuel-crypto = "0.5"
fuels = { version = "0.22", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
