[package]
name = "fuel-contract-message-predicate"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Script and predicate for relaying contract messages."

[dependencies]
fuel-asm = "0.27.0"
fuel-tx = "0.27.0"
sha2 = "0.10.6"

[dev-dependencies]
fuel-core-interfaces = "0.15.3"
fuels = { version = "0.38.1", features = ["fuel-core-lib"] }
hex = "0.4.3"
insta = "1.28"
tokio = { version = "1.26", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
